# game-notifier

./: .env.example  .gitignore  README.md  flake.nix  game-notifier-service.nix  pyproject.toml
src/: main.py
src/game_notifier/: database.py  fetcher.py  install.py  models.py  notifier.py  utils.py
src/game_notifier/sources/: __init__.py  base.py  epic.py  steam.py
