[project]
authors = [{name = "AimPizza", email = "rickomo.us@gmail.com"}]
name = "game-notifier"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["epic-games-free>=0.1.4,<0.2", "python-dotenv"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
game_notifier = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python src/main.py"

[tool.pixi.dependencies]
python-dotenv = ">=1.1.0,<2"
