[project]
authors = [{ name = "AimPizza", email = "rickomo.us@gmail.com" }]
name = "game-notifier"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["python-dotenv"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
game_notifier = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python src/main.py"
rmservice = "systemctl --user stop game-notifier@$(basename $(pwd)).service && systemctl --user disable game-notifier@$(basename $(pwd)).service && rm $HOME/.config/systemd/user/game-notifier* && systemctl --user daemon-reload && echo 'stopped, disabled, and removed service!'"

[tool.pixi.dependencies]
python-dotenv = ">=1.1.0,<2"

[tool.ruff]
select = ["D", "E", "F", "W", "B"]
ignore = []

[tool.ruff.format]
quote-style = "single"
